--- a/style.css
+++ b/style.css
@@ -7,15 +7,83 @@
   color: unset;
 }
 
+html {
+  width: 100vw;
+  height: 100vh;
+}
+
 body {
+  display: flex;
+  width: 100%;
+  height: 100%;
   font-size: 1rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   overflow: hidden;
 }
 
-#app {
-  width: 100vw;
-  height: 100vh;
+#side-bar {
+  /* flex-grow: 1; */
+  width: 10%;
+  max-width: 80px;
+  /* width: 50px; */
+  height: 100%;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1em; */
+  /* padding: 1em 0em; */
+  background-color: #333;
+  color: #fff;
+}
+
+#side-bar > ul {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  /* align-items: stretch; */
+  justify-content: space-between;
+  /* gap: .2em; */
+  /* border: 1px solid red; */
+  background-color: inherit;
+  color: #fff;
+}
+
+#side-bar > ul > li {
+  flex-grow: 1;
+  /* border: 1px solid red; */
+  /* padding: 1em 0 0 0; */
+  /* text-align: center; */
+  background-color: inherit;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid transparent;
+}
+
+#side-bar > ul > li:hover {
+  cursor: pointer;
+  border: 1px solid #fff;
+}
+
+#side-bar > ul > li > img {
+  width: 100%;
+  height: 100%;
+  /* border: 1px solid red; */
+  padding: 1.5em;
+  filter: invert();
+}
+
+#editor {
+  flex-grow: 1;
+  /* width: 100vw; */
+  /* height: 100vh; */
+  width: 90%;
+  /* width: calc(100% - 50px); */
+  height: 100%;
   display: grid;
   grid-template-areas: 
     "html js"
